# squad

./: AUTHORS  INSTALL  Makefile  Makefile.in  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool
src/: Makefile  Makefile.am  Makefile.in
src/ar/: AR.cpp  AR.h  ARPredict  ARPredict.cpp  ARTrain  ARTrain.cpp  Makefile  Makefile.am  Makefile.in  ar_README
src/ar/.deps/: AR.Po  ARPredict.Po  ARTrain.Po
src/box/: BOX  BOX.cpp  Makefile  Makefile.am  Makefile.in  box_README
src/box/.deps/: BOX.Po
src/clusterc/: CLUSTERCPredict  CLUSTERCPredict.cpp  CLUSTERCTrain  CLUSTERCTrain.cpp  CLUSTERCTrain.h  Makefile  Makefile.am  Makefile.in  clusterc_README
src/clusterc/.deps/: CLUSTERCPredict.Po  CLUSTERCTrain.Po
src/clusterd/: CLUSTERDPredict  CLUSTERDPredict.cpp  CLUSTERDTrain  CLUSTERDTrain.cpp  CLUSTERDTrain.h  Makefile  Makefile.am  Makefile.in
src/clusterd/.deps/: CLUSTERDPredict.Po  CLUSTERDTrain.Po
src/data-generator/: GENHmm  GENHmm.cpp  Makefile  Makefile.am  Makefile.in  data-generator_README
src/data-generator/.deps/: GENHmm.Po
src/fsa/: FSA.cpp  FSA.h  FSAPredict  FSAPredict.cpp  FSATrain  FSATrain.cpp  FSAzPredict  FSAzPredict.cpp  Makefile  Makefile.am  Makefile.in  STIDEPredict  STIDEPredict.cpp
src/fsa/.deps/: FSA.Po  FSAPredict.Po  FSATrain.Po  FSAzPredict.Po  STIDEPredict.Po
src/hmm/: HMMGenseq  HMMGenseq.c  HMMPredict  HMMPredict.c  HMMTrain  HMMTrain.c  Makefile  Makefile.am  Makefile.in  backward.c  baum.c  forward.c  hmm.h  hmmutils.c  nrutil.c  sequence.c  viterbi.c
src/hmm/.deps/: HMMGenseq.Po  HMMPredict.Po  HMMTrain.Po  backward.Po  baum.Po  forward.Po  hmmrand.Po  hmmutils.Po  nrutil.Po  sequence.Po  viterbi.Po
src/knnc/: KNNC  KNNC.cpp  KNNC_TOP  KNNC_TOP.cpp  Makefile  Makefile.am  Makefile.in  findsimc  findsimc.cpp
src/knnc/.deps/: KNNC.Po  KNNC_TOP.Po  findsimc.Po
src/knnd/: KNND  KNND.cpp  Makefile  Makefile.am  Makefile.in  findsimd  findsimd.cpp
src/knnd/.deps/: KNND.Po  findsimd.Po
src/ocsvm/: Makefile  Makefile.am  Makefile.in  OCSVMPredict  OCSVMPredict.cpp  OCSVMTrain  OCSVMTrain.cpp  sax.cpp  svm.cpp  svm.h
src/ocsvm/.deps/: OCSVMPredict.Po  OCSVMTrain.Po  sax.Po  svm.Po
src/sax/: Makefile  Makefile.am  Makefile.in  SAXConv  SAXConv.cpp  SAXGenalphamap  SAXGenalphamap.cpp  sax.cpp
src/sax/.deps/: SAXConv.Po  SAXGenalphamap.Po
src/svr/: Makefile  Makefile.am  Makefile.in  SVRPredict  SVRPredict.cpp  SVRTrain  SVRTrain.cpp  sax.h
src/svr/.deps/: SVRPredict.Po  SVRTrain.Po
src/winc/: Makefile  Makefile.am  Makefile.in  WINC  WINC.cpp  WINC_MAX  WINC_MAX.cpp
src/winc/.deps/: WINC.Po  WINC_MAX.Po
src/wind/: Makefile  Makefile.am  Makefile.in  WIND  WIND.cpp  WIND_MAX  WIND_MAX.cpp
src/wind/.deps/: WIND.Po  WIND_MAX.Po
